--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@headlessui/react": "^1.7.17",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.2.1",
+    "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/themes": "^3.1.3",
     "@studio-freight/lenis": "^1.0.23",
     "@types/jsonwebtoken": "^9.0.5",
@@ -24,8 +25,9 @@
     "@vercel/postgres": "^0.5.1",
     "autoprefixer": "10.4.15",
     "buffer": "^6.0.3",
+    "class-variance-authority": "^0.7.1",
     "cloudinary": "^1.41.2",
-    "clsx": "^2.1.0",
+    "clsx": "^2.1.1",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
     "flowbite-react": "^0.7.2",
@@ -44,8 +46,9 @@
     "react-icons": "^4.12.0",
     "react-intersection-observer": "^9.5.3",
     "stream-browserify": "^3.0.0",
-    "tailwind-merge": "^2.2.0",
+    "tailwind-merge": "^2.6.0",
     "tailwindcss": "3.3.3",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "5.2.2",
     "url": "^0.11.1"
   },
